--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #242424;
+  color: #eeeeee;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
